# Hangman

./: .gitmodules  README.md
C/: .gitignore  CMakeLists.txt  README.md
C/include/: guess.h  menu.h  play.h  player.h  scoreboard.h  stats.h
C/src/: guess.c  input.c  menu.c
Hangman/: Hangman  Makefile  mk
Hangman/Resources/: menu.h  play.h  resource.h  scoreboard  scoreboard.h  stats.h  time.h  word.h
Hangman/resources/: scoreboard  scoreboard.txt
Hangman/resources/dicts/: misc.txt  t.txt  z.txt
Hangman/src/: dictionary.c  dictionary.h  input.c  input.h  main.c  menu.c  menu.h  play.c  play.h  resource.h  scoreboard.c  scoreboard.h  stats.c  stats.h  time.c  time.h  word.c
c/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
c/include/: hang_time.h  typedef.h  util.h  word.h
c/src/: menu.c  play.c  scoreboard.c  util.c
c_/: README.md
c_/include/: constants.h  input.h
c_/src/: hang_time.c  main.c  stats.c
cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md
cpp/include/: hangman.hpp  play_menu_item.hpp  player.hpp  rules_menu_item.hpp  score_board_menu_item.hpp  stats_menu_item.hpp  util.hpp
cpp/src/: hangman.cpp  main.cpp  play_menu_item.cpp  rules_menu_item.cpp  score_board_menu_item.cpp  stats_menu_item.cpp
